# CPP-2023-OOP-

lab01/: functions.cpp  functions.h  main_01.cpp
lab02/: Point.cpp  Point.h  main_02.cpp
lab03/: CMakeLists.txt  LIST.cpp  LIST.h  Stack.cpp  Stack.h  main_03.cpp
lab04/: CMakeLists.txt  Point.cpp  Point.h  PointSet.cpp  PointSet.h  main_04.cpp
lab05/: Answer.cpp  Answer.h  CMakeLists.txt  Question.cpp  Question.h  Quiz.cpp  Quiz.h  QuizGame.cpp  QuizGame.h  main_05.cpp
lab06/: Matrix.cpp  Matrix.h  main_06.cpp
lab09/: main_09.cpp
lab10/: Alkalmazott.cpp  Alkalmazott.h  CMakeLists.txt  Ceg.cpp  Ceg.h  Manager.cpp  Manager.h  Szemely.cpp  Szemely.h  main_10.cpp
lab11/: CMakeLists.txt  GraduationDao.cpp  GraduationDao.h  Student.cpp  Student.h  StudentService.cpp  StudentService.h  StudentServiceImpl.cpp  StudentServiceImpl.h  main_11.cpp
lab12/: CMakeLists.txt  Settlement.cpp  Settlement.h  SettlementStatistics.cpp  SettlementStatistics.h  SettlementStatisticsImpl.cpp  SettlementStatisticsImpl.h  main_12.cpp
lab13/: SimpleTextGenerator.cpp  SimpleTextGenerator.h  TextGenerator.h  main_13.cpp
