project(lab11)
add_executable(lab11 main_11.cpp
        Student.cpp
        Student.h
        Student.h
        GraduationDao.cpp
        GraduationDao.h
        GraduationDao.h
        StudentService.cpp
        StudentService.h
        StudentService.h
        StudentServiceImpl.cpp
        StudentServiceImpl.h)
