project(lab12)
add_executable(lab12 main_12.cpp
        Settlement.cpp
        Settlement.h
        SettlementStatistics.cpp
        SettlementStatistics.h
        SettlementStatistics.h
        SettlementStatistics.h
        SettlementStatistics.cpp
        SettlementStatisticsImpl.cpp
        SettlementStatisticsImpl.h)
